--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.amplifyframework:aws-api:1.29.1'
+    implementation 'com.amplifyframework:aws-datastore:1.29.1'
 
+    
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
