--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 dependencies {
     implementation 'com.amplifyframework:aws-api:1.29.1'
     implementation 'com.amplifyframework:aws-datastore:1.29.1'
+    implementation 'com.amplifyframework:core:1.29.1'
 
     
     implementation 'androidx.appcompat:appcompat:1.2.0'
