--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,16 @@ dependencies {
     implementation 'com.amplifyframework:aws-api:1.29.1'
     implementation 'com.amplifyframework:aws-datastore:1.29.1'
     implementation 'com.amplifyframework:core:1.29.1'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.30.0'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.30.0'
 
     
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
+    implementation 'com.google.android.gms:play-services-measurement-api:18.0.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
