--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -43,5 +43,12 @@
         ]
       }
     }
+  },
+  "storage": {
+    "datas3task": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
