--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,13 @@ dependencies {
     implementation 'com.amplifyframework:core:1.29.1'
     implementation 'com.amplifyframework:aws-auth-cognito:1.30.0'
     implementation 'com.amplifyframework:aws-auth-cognito:1.30.0'
+    implementation 'com.amplifyframework:aws-storage-s3:1.30.0'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.30.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    def activity_version = "1.4.0"
+    // Java language implementation
+    implementation "androidx.activity:activity:$activity_version"
 
-    
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -48,4 +53,5 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
 }
