--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -71,6 +73,9 @@
                 <data android:scheme="myapp" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".MyNavigationService"
+            android:foregroundServiceType="location" />
     </application>
 
 </manifest>
